<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.graphics</groupId>
  <artifactId>JavaGraphics</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>JavaGraphics</name>
  <description>Software 3D engine</description>
  
  	<properties>
  		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    	<aspectj.version>1.9.7</aspectj.version>
  	</properties>
  
	<dependencies>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.12.5</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.12.5</version>
		</dependency>
		<dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
		    <version>30.1.1-jre</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		    <version>3.12.0</version>
		</dependency>
		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.11.0</version>
		</dependency>
		<dependency>
    <groupId>org.aspectj</groupId>
	    <artifactId>aspectjrt</artifactId>
	    <version>${aspectj.version}</version>
	</dependency>
	<dependency>
	    <groupId>io.reactivex.rxjava2</groupId>
	    <artifactId>rxjava</artifactId>
	    <version>2.2.21</version>
	</dependency>
	<dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-api</artifactId>
	    <version>5.7.2</version>
	    <scope>test</scope>
	</dependency>
	</dependencies>
  <build>

    <plugins>  
	  <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.0.0-M3</version>
      </plugin>
      <plugin>
	    <groupId>org.codehaus.mojo</groupId>
	    <artifactId>aspectj-maven-plugin</artifactId>
	    <version>1.14.0</version>
		<executions>
          <execution>
            <goals>
              <goal>compile</goal>       <!-- use this goal to weave all your main classes -->
            </goals>
          </execution>
        </executions>
	    <dependencies>
	      <dependency>
	        <groupId>org.aspectj</groupId>
	        <artifactId>aspectjrt</artifactId>
	        <version>${aspectj.version}</version>
	      </dependency>
	      <dependency>
	        <groupId>org.aspectj</groupId>
	        <artifactId>aspectjtools</artifactId>
	        <version>${aspectj.version}</version>
	      </dependency>
	    </dependencies>
	    <configuration>
	      <complianceLevel>16</complianceLevel>
	      <source>16</source>
	      <target>16</target>
	      <forceAjcCompile>true</forceAjcCompile>
	    </configuration>
	  </plugin>
	  <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>16</source>
          <target>16</target>
        </configuration>
        <executions>
          <execution>
            <id>moo</id>
            <phase>compile</phase>
        </execution>
        <execution>
            <id>default-compile</id>
            <phase>none</phase>
        </execution>
        </executions>
      </plugin>
	  <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-assembly-plugin</artifactId>
	    <executions>
	        <execution>
	            <phase>package</phase>
	            <goals>
	                <goal>single</goal>
	            </goals>
	            <configuration>
	                <archive>
	                <manifest>
	                    <mainClass>
	                        com.graphics.tests.GraphicsTest
	                    </mainClass>
	                </manifest>
	                </archive>
	                <descriptorRefs>
	                    <descriptorRef>jar-with-dependencies</descriptorRef>
	                </descriptorRefs>
	            </configuration>
	        </execution>
	    </executions>
	</plugin>
    </plugins>

  </build>
</project>